--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JobsClient</title>
+  <title>Jobb Tracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Custom Styles-->
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-employer></app-employer>
 </body>
 </html>
